# odl

./: .buildinfo  .coveragerc  .gitignore  .gitmodules  .landscape.yaml  .landscape.yml  .pep8speaks.yml  .pylintrc  .pypirc  .readthedocs.yaml  .spyderworkspace  .travis.yml  CONTRIBUTING.md  CONTRIBUTORS.md  HOWTO_RELEASE.md  ISSUES  LICENSE  MANIFEST.in  README.md  RL.pyperf  RL1.pyperf  conftest.py  cudaTVDenoise.pyperf  cudaTVDenoise1.pyperf  cudaTVDenoiseImage.pyperf  curve.py  func_operator.py  genindex.html  index.html  labcomp.py  mrc_basic.py  mrc_fei.py  objects.inv  odl.contrib.html  odl.deform.html  odl.deform.linearized.html  odl.diagnostics.examples.html  odl.diagnostics.html  odl.diagnostics.operator.html  odl.diagnostics.space.html  (+121 more)
.doctrees/: index.doctree  odl.contrib.doctree  odl.deform.doctree  odl.deform.linearized.doctree  odl.diagnostics.doctree  odl.diagnostics.examples.doctree  odl.diagnostics.operator.doctree  odl.diagnostics.space.doctree  odl.discr.diff_ops.doctree  odl.discr.discr_ops.doctree  odl.discr.discr_space.doctree  odl.discr.discr_utils.doctree  odl.discr.doctree  odl.discr.grid.doctree  odl.discr.partition.doctree  odl.doctree  odl.operator.default_ops.doctree  odl.operator.doctree  odl.operator.operator.doctree  odl.operator.oputils.doctree  odl.operator.pspace_ops.doctree  odl.operator.tensor_ops.doctree  odl.phantom.doctree  odl.phantom.emission.doctree  odl.phantom.geometric.doctree  odl.phantom.misc_phantoms.doctree  odl.phantom.noise.doctree  odl.phantom.phantom_utils.doctree  odl.phantom.transmission.doctree  odl.set.doctree  odl.set.domain.doctree  odl.set.sets.doctree  odl.set.space.doctree  odl.solvers.doctree  odl.solvers.functional.default_functionals.doctree  odl.solvers.functional.derivatives.doctree  odl.solvers.functional.doctree  odl.solvers.functional.example_funcs.doctree  odl.solvers.functional.functional.doctree  odl.solvers.iterative.doctree  (+67 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
RL/: __init__.py
TestResults/: RL1.TE.Tests.mdf  RL1.TE.Tests_log.ldf
_modules/: index.html
_sources/: odl.contrib.rst.txt  odl.deform.linearized.rst.txt  odl.deform.rst.txt  odl.diagnostics.examples.rst.txt  odl.diagnostics.operator.rst.txt  odl.diagnostics.rst.txt  odl.diagnostics.space.rst.txt  odl.discr.diff_ops.rst.txt  odl.discr.discr_ops.rst.txt  odl.discr.discr_space.rst.txt  odl.discr.discr_utils.rst.txt  odl.discr.grid.rst.txt  odl.discr.partition.rst.txt  odl.discr.rst.txt  odl.operator.default_ops.rst.txt  odl.operator.operator.rst.txt  odl.operator.oputils.rst.txt  odl.operator.pspace_ops.rst.txt  odl.operator.rst.txt  odl.operator.tensor_ops.rst.txt  odl.phantom.emission.rst.txt  odl.phantom.geometric.rst.txt  odl.phantom.misc_phantoms.rst.txt  odl.phantom.noise.rst.txt  odl.phantom.phantom_utils.rst.txt  odl.phantom.rst.txt  odl.phantom.transmission.rst.txt  odl.rst.txt  odl.set.domain.rst.txt  odl.set.rst.txt  odl.set.sets.rst.txt  odl.set.space.rst.txt  odl.solvers.functional.default_functionals.rst.txt  odl.solvers.functional.derivatives.rst.txt  odl.solvers.functional.example_funcs.rst.txt  odl.solvers.functional.functional.rst.txt  odl.solvers.functional.rst.txt  odl.solvers.iterative.iterative.rst.txt  odl.solvers.iterative.rst.txt  odl.solvers.iterative.statistical.rst.txt  (+65 more)
_static/: documentation_options.js
benchmark/: analyse_results.py  dev_test.py  main.py  ray_trafo_test.py  test_profiler.py
builders/: xray.py
conda/: build.sh  meta.yaml
data_model/: gfunc.py
datamodel/: coord.py  gfunc.py
dev/: dev.html  document.html  extend.html  release.html  testing.html
doc/: Makefile  conf.py  conftest.py  doctest_doc.py  generate_doc.py  gitwash_dumper.py  index.rst  make.bat  modules.rst  odl.diagnostics.rst  odl.discr.rst  odl.geometry.rst  odl.operator.rst  odl.rst  odl.set.rst  odl.space.rst  odl.util.rst  requirements.txt  test.discr.rst  test.operator.rst  test_doc.py
docs/: requirements.txt
examples/: .convolution_test_cuda.py.swp  .cudaTVDenoise.py.swp  .gitignore  README.md  __init__.py  astra_parallel_2d_fp.py  bugtest.py  conftest.py  convolution_class.py  convolution_test.py  convolution_test_cuda.py  cudaTVDenoise.py  cudaTVDenoiseImage.py  cudarnSpeed_test.py  cudaspace_speedtest.py  fourier_trafo.py  functional_L1_iso.py  functionals_basic_examples_and_test.py  johan_functiona_.py  oit_reconstruction_new.py  operator_test.py  optimal_information_transport_test.py  pooled.py  projection_gpumci.py  projection_gpumci_scatter.py  projection_simrec2d.py  projection_simrec2dCuda.py  projection_simrec3dCuda.py  reals.py  result.txt  result2.txt  simpleRN.py  simple_operator.py  simple_rn.py  simple_test_astra.py  solverExamples.py  solver_examples.py  space_test.py  test_examples.py  testutils.py  (+9 more)
geometry/: curve.py  detector.py  tomogeom.py
getting_started/: about_odl.html  first_steps.html  getting_started.html  installing.html  installing_conda.html  installing_extensions.html  installing_pip.html  installing_source.html
guide/: faq.html  functional_guide.html  geometry_guide.html  glossary.html  guide.html  linearspace_guide.html  numpy_guide.html  operator_guide.html  pdhg_guide.html  proximal_lang_guide.html  vectorization_guide.html
math/: derivatives_guide.html  discretization.html  linear_spaces.html  math.html  resizing_ops.html
misc/: ctf.py  emcfg.py  mrc_imod.py
odl/: README.md  VERSION  __init__.py  conftest.py  pytest.ini
operator/: operator.py
test/: __init__.py  convolution_test.py  convolution_test_cuda.py  cudaTVDenoise.py  cudaTVDenoiseImage.py  cudarnSpeed_test.py  cudarn_test.py  defaultSolvers_test.py  difference_test_cuda.py  functionSpaces_test.py  linear_operator_test.py  operator_test.py  productpace_test.py  productspace_test.py  projection_simrec2d.py  rn_test.py  runAutomatedTests.py  set_test.py  simple_test.py  simple_test_astra.py  simple_test_simrec2d.py  solverExamples.py  space_test.py  test_examples.py  testutils.py  tomography_simrec2d.py
tools/: release.sh
unrelated/: rec_params.py  tiltangles.py
utility/: fourier.py
(+1556 files in other folders)
